# vimscript-language-server

./: CONTRIBUTING.md  Cargo.toml  README.md
lsp-tee/: Cargo.toml
lsp-tee/src/: main.rs
parser/: Cargo.toml
parser/src/: lib.rs  syntax_kind.rs
syntax/: Cargo.toml
syntax/src/: lexer.rs  lib.rs  tests.rs
syntax/test_data/lexer/: let.lex  let.vim
syntax/test_data/parser/: let.ast  syntax_recovery_on_error.ast  syntax_recovery_on_error.vim
vimscript-core/: Cargo.toml  GRAMMAR.md
vimscript-core/src/: ast.rs  format.rs  lexer.rs  lib.rs  lsp.rs  peekable_chars_with_position.rs  protocol.rs  rename.rs  server.rs  source_map.rs  span.rs  token_iterator.rs
vimscript-core/src/lsp/: tests.rs
vimscript-core/src/parser/: expression.rs  if_statement.rs  let_statement.rs  mod.rs  return_statement.rs  set_statement.rs  try_statement.rs  while_statement.rs
vimscript-core/tests/: format.rs
vimscript-core/tests/format/: finish.after.vim  finish.before.vim  function.after.vim  function.before.vim  if.after.vim  if.before.vim  let.after.vim  let.before.vim
vimscript-format/: Cargo.toml
vimscript-format/src/: main.rs
vimscript-language-server/: Cargo.toml
vimscript-language-server/src/: main.rs
vimscript-lint/: Cargo.toml
vimscript-lint/src/: main.rs
